--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
   "description": "Zaninha's food market",
   "author": "",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "db": "json-server --watch db/db.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "main": "index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "json": "^11.0.0",
+    "json-server": "^0.17.4",
+    "server": "^1.0.38",
+    "v-tooltip": "^2.1.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.2.5",
+    "vue3-popper": "^1.5.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
